# pileupbuster.github.io

./: # Pileup Buster Integration - Build Requ.md  .gitignore  404.html  ADMIN_PAGE_SEPARATION.md  APIDetails.md  CNAME  DEBUG_TROUBLESHOOTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGO_SETUP.md  Makefile  PERFORMANCE_OPTIMIZATION.md  QT6_DETAILED_WEBSOCKET_IMPLEMENTATION.md  QT6_WEBSOCKET_IMPLEMENTATION_GUIDE.md  README.md  RUNNING_GUIDE.md  STATUS_PAGE.md  WEBSOCKET_AUTH_REQUIREMENTS.md  WEBSOCKET_IMPLEMENTATION_COMPLETE.md  WORKED_CALLERS_FEATURE.md  WS-AdminWorkAnyQso.md  WS-All.prd  WS-PBrxQSO.md  WS-SendQSO.md  WS-WebSocketBible.md  WS-admin_cancel_qso.md  WS-admin_get_status.md  WS-admin_ping.md  WS_EnableDisable.md  docker-compose.dev.yml  docker-compose.yml  explanation.md  frontend.md  index.html  interactive_qso_test.py  quick_heartbeat_test.py  simple_bridge.py  simple_test.js  test-docker-setup.sh  testUDP.ps1  (+26 more)
backend/: .dockerignore  .env.example  .evn  .gitignore  Dockerfile  app.py  check_env.py  docker-compose.yml  dockercomprun.sh  pyproject.toml  quick_test.py  requirements.txt  sample_status_page.html  test_admin_queue_clear.py  test_complete_system_clear.py  test_event_integration.py  test_manual_queue_clear.py  test_qrz_fields.py  test_websocket_events.py  test_websocket_operations.py
backend/app/: __init__.py  app.py  auth.py  database.py  main.py  utils.py  validation.py  websocket_handlers.py  websocket_protocol.py
backend/tests/: test_callsign_validation.py  test_callsign_validation_integration.py  test_duplicate_prevention.py  (+14 more)
(+215 files in other folders)
